# Voice-To-Text

./: README.md  main.py  pyproject.toml  replit.nix  voice.m4a
